--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-fastapi>=0.110.0
-uvicorn[standard]>=0.24.0
-pydantic>=2.5.0
-fastapi-mcp
+# Core dependencies
+fastapi>=0.110.0,<1.0.0
+uvicorn[standard]>=0.24.0,<1.0.0
+pydantic>=2.5.0,<3.0.0
+
+# MCP Protocol support
+fastapi-mcp>=0.1.0
+
+# Development dependencies (optional)
+pytest>=7.0.0,<8.0.0
+pytest-asyncio>=0.21.0,<1.0.0
+httpx>=0.25.0,<1.0.0
+
+# Production dependencies (optional)
+gunicorn>=21.0.0,<22.0.0
